--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,16 @@
-baseURL: "https://itworksconsulting.co/"
+baseURL: "https://ITworksconsulting.co/"
 theme: "up-business-theme"
 languageCode: "en-us"
 
-title: "Up Business"
+title: "ITworks Consulting"
 
 # googleAnalytics: ""
 
 summaryLength: 20
 
 params:
-  title: "Up Business"
-  description: "We specialize in providing services to desing websites, applications, build and maintain business for customers."
+  title: "ITworks Consulting"
+  description: "We’re your partner in IT and business growth. Learn more about our IT solutions by talking to one of our experts."
   images: 
     - "images/hero-image.png"
 
@@ -21,72 +21,71 @@ params:
     backgroundColor: "#FFFFFF"
     faviconColor: "#000000"
 
-  social:
-    dribbble: "#"
-    instagram: "#"
-    facebook: "#"
-    twitter: "#"
+  # social:
+  #   dribbble: "#"
+  #   instagram: "#"
+  #   facebook: "#"
+  #   twitter: "#"
 
   location:
-    - "3891 Ranchview Dr. Richardson, California 62639"
-    - "4517 Washington Ave. Manchester, Kentucky 39495"
+    - "Woluwe Saint Lambert, Brussels 1200"
 
   contact:
-    - "nitish.verma@itwc.eu
+    - "nitish.verma@itwc.eu"
     - "+32-465 96 1874"
 
-  copyright: "© 2022 Up Business All Rights Reserved"
+  copyright: "© 2023 ITWC All Rights Reserved"
 
   postProcess: false
 
 menus:
-  main:
-    - name: "Home"
-      url: "/#hero"
-      weight: 1
+  # main:
+  #   - name: "Home"
+  #     url: "/#hero"
+  #     weight: 1
 
-    - name: "How we work"
-      url: "/#"
-      weight: 2
+    # - name: "How we work"
+    #   url: "/#"
+    #   weight: 2
 
-    - name: "Our team"
-      url: "/#"
-      weight: 3
+    # - name: "Our team"
+    #   url: "/#"
+    #   weight: 3
 
-    - name: "Pricing"
-      url: "/#"
-      weight: 4
+    # - name: "Pricing"
+    #   url: "/#"
+    #   weight: 4
 
-    - name: "Blog"
-      url: "/blog"
-      weight: 5
+    # - name: "Blog"
+    #   url: "/blog"
+    #   weight: 5
 
   buttons:
-    - name: "Book a call"
-      url: "/#"
+    - name: "Let's connect"
+      url: "mailto:nitish.verma@itwc.eu"
       weight: 5
       pre: "btn btn-primary text-light"
 
-  footer:
-    - name: "Home"
-      url: "/#hero"
-      weight: 1
+  # footer:
+  #   - name: "Home"
+  #     url: "/#hero"
+  #     weight: 1
 
-    - name: "How we work"
-      url: "/#"
-      weight: 2
+  #   - name: "How we work"
+  #     url: "/#"
+  #     weight: 2
 
-    - name: "Our team"
-      url: "/#"
-      weight: 3
+  #   - name: "Our team"
+  #     url: "/#"
+  #     weight: 3
 
-    - name: "Pricing"
-      url: "/#"
-      weight: 4
+  #   - name: "Pricing"
+  #     url: "/#"
+  #     weight: 4
 
-    - name: "Blog"
-      url: "/blog"
-      weight: 5
+  #   - name: "Blog"
+  #     url: "/blog"
+  #     weight: 5
 
 taxonomies:
   series: "series"
