--- a/data/home/cta.yaml
+++ b/data/home/cta.yaml
@@ -1,9 +1,9 @@
-enabled: true
-id: "cta"
+# enabled: true
+# id: "cta"
 
-content:
-  title: "Start your business now!"
-  image: "images/services-web-development.png"
-  button:
-    label: "Let's talk"
-    url: "#"
+# content:
+#   # title: "Start your journey to IT consulting now!"
+#   image: "images/services-web-development.png"
+#   button:
+#     label: "Let's talk"
+#     mailto: "nitish.verma@itwc.eu"
